기능 수정해서 배포파일까지 만듬
안드로이드10 이상에서 갤러리 내 폴더 생성 안되서 직접하는 방식으로 함
랜덤 추첨시 중복 추첨 안되게 수정
select 폴더 안 만들었거나, 그림 2장 이상 안 넣었으면 알림메세지 띄우고 진행없게 함

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.ARVT.arvtraining"
+        applicationId "com.example.randomimage"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 7
