플레이 스토어에 출시 신청함
검토중.

- 타겟넘버 화면 가운데에 뜨게 조정하기

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    compileSdkVersion 31
 
     defaultConfig {
-        applicationId "com.example.randomimage"
+        applicationId "com.util.imageselector"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 7
         versionName "1.07"
 
@@ -20,6 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -30,5 +34,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.android.gms:play-services-ads:15.0.0'
+    implementation 'com.android.installreferrer:installreferrer:1.0'
+    implementation('io.dfinery:android-sdk:2.3.1.7'){
+        exclude group: 'com.android.support'
+    }
 
 }
